# rune

./: Cargo.toml  LICENSE  PUSH.md  README.md  rune.h
.github/workflows/: ci.yml
benches/: interpreter_bench.rs
examples/: host.c
examples/hello_world/: main.rs
examples/plugin_host/: main.rs
runec/: Cargo.toml
runec/src/: main.rs
src/: ffi.rs  instance.rs  ir.rs  lib.rs  memory.rs  module.rs  runtime.rs  stack.rs  trap.rs  types.rs
src/compiler/: codegen.rs  mod.rs  rune_asm.c
src/loader/: elf.rs  mod.rs
src/vm/: vm.c
tests/: integration_tests.rs  test_vm.c
