[workspace]
members = [".", "runec"]

[package]
name = "rune"
version = "0.1.0"
edition = "2021"
description = "Low-latency AOT-first plugin runtime"

[lib]
name = "rune"
crate-type = ["cdylib", "rlib"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
